<resources>
    <string name="image_complete">完成</string>
    <string name="image_select_pic_number_at_most">您最多只能选择%d张图片</string>
    <string name="image_preview">预览</string>
    <string name="image_complete_number">完成(%1$d/%2$d)</string>
    <string name="image_use">使用</string>
    <string name="image_order">%1$d/%2$d</string>
    <string name="image_preview_number">预览(%1$d)</string>
    <string name="image_zero_number">0张</string>
    <string name="select_from_pic">从相册选择</string>
    <string name="select_from_camera">拍摄</string>
    <string name="cancel">取消</string>
    <string name="select">选择</string>
    <string name="gallary">相册</string>
    <string name="all_pic">所有图片</string>
    <string name="tip_cancel_takephoto">取消</string>
    <string name="tip_takephoto">拍照</string>
    <string name="tip_form_pic_takephoto">从相册选择</string>
    <string name="msg_crop_error">裁剪图片失败，请重试</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_msg_storage_title">请允许获取存储权限</string>
    <string name="dialog_msg_camera_title">请允许获取相机权限</string>
    <string name="dialog_msg_rationale_storage_content">我们需要获取存储权限，才能访问相册选择图片，请授予该权限。</string>
    <string name="dialog_msg_rationale_camera_content">我们需要获取相机权限，才能进行拍照，请授予该权限。</string>
    <string name="dialog_msg_deny_storage_content"><![CDATA[由于应用无法获取存储权限,无法选择图片，您可以在设置-->权限页面开启权限后再使用。]]></string>
    <string name="dialog_msg_deny_camera_content"><![CDATA[由于应用无法获取相机权限,无法拍照，您可以在设置-->权限页面去开启权限后再使用。]]></string>
    <string name="dialog_deny">拒绝</string>
    <string name="dialog_go_setting">去设置</string>
</resources>
