<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_bg_takephoto"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/select_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:padding="18dp"
            android:textStyle="bold"
            android:text="@string/tip_form_pic_takephoto"
            android:textColor="@color/text_light_blue"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dialogplus_card_shadow"/>
        <TextView
            android:id="@+id/select_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:padding="18dp"
            android:textStyle="bold"
            android:text="@string/tip_takephoto"
            android:textColor="@color/text_light_blue"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/select_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="18dp"
        android:textStyle="bold"
        android:text="@string/tip_cancel_takephoto"
        android:background="@drawable/shape_bg_takephoto"
        android:textColor="@color/text_blue"
        android:textSize="16sp"/>
</LinearLayout>