<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#aa000000">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_transparent_round"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/common_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gallary"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fr_toolbar"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/selector_btn_green"
                android:enabled="false"
                android:padding="6dp"
                android:text="@string/image_complete"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <View
                android:id="@+id/tv_overlay"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|end"
                android:background="@color/common_color_trans_grey" />
        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fr_anchor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aa000000">

            <LinearLayout
                android:id="@+id/ll_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_pic"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="bottom"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_fold_more" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:enabled="false"
                android:text="@string/image_preview"
                android:textColor="@color/selector_text_enable"
                android:textSize="15sp" />

        </FrameLayout>

    </LinearLayout>


</LinearLayout>